# gtipc

./: .gitignore  CMakeLists.txt  Makefile  README.md  spawn.sh
include/: gtipc_api.h
include/gtipc/: api.h  messages.h  params.h  types.h
sample/: client.c
src/api/: api.c  gtipc_api.c
src/server/: gtipc_server.c  gtipc_server.h  server.c  server.h
